--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -47,9 +47,9 @@
             android:id="@+id/f_register_b_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/commonTextColor"
+            android:textColor="@color/commonButtonTextColor"
             android:text="@string/register"
-            android:backgroundTint="@color/commonButtonColor"/>
+            android:backgroundTint="@color/commonButtonColor" />
 
     </LinearLayout>
 
