--- a/app/src/main/res/layout/activity_travels.xml
+++ b/app/src/main/res/layout/activity_travels.xml
@@ -1,72 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="left"
     tools:context=".activity.TravelsActivity"
-    android:id="@+id/a_travels_fl_root">
+    android:id="@+id/a_travels_dl_root">
 
-    <android.support.constraint.ConstraintLayout
+    <include layout="@layout/activity_travels_content"/>
+
+    <FrameLayout
+        android:id="@+id/a_travels_fl_fragment_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/a_travels_abl_0"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/a_travels_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:title="@string/app_name"/>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/a_travels_abl_0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="15dp">
-
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/a_travels_srl_travels"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/a_travels_r_travels"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    tools:listitem="@layout/item_travel"/>
-
-            </android.support.v4.widget.SwipeRefreshLayout>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/a_travels_fab_add_travel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/commonButtonColor"
-                android:src="@drawable/ic_add_24dp"
-                android:layout_gravity="bottom|right"
-                android:layout_margin="10dp"/>
-
-        </FrameLayout>
-
-    </android.support.constraint.ConstraintLayout>
-
-    <View
-        android:id="@+id/a_travels_v_disabled_screen"
-        android:layout_width="match_parent"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/a_travels_nav"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="#55000000"
-        android:clickable="true"
-        android:focusable="true"/>
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/layout_nav_header"
+        app:menu="@menu/menu_nav" />
 
-</FrameLayout>
+</android.support.v4.widget.DrawerLayout>
