--- a/app/src/main/res/layout/activity_travels_content.xml
+++ b/app/src/main/res/layout/activity_travels_content.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/commonButtonColor"
                 android:src="@drawable/ic_add_24dp"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 android:layout_margin="10dp"/>
 
         </FrameLayout>
